# purei9_unofficial

./: .gitignore  LICENSE  Makefile  README.md  build_and_upload.sh  functions.md  message.py  purei9-cli.py  purei9.py  setup.cfg
.github/workflows/: python-test.yml
src/purei9_unofficial/: .gitignore  .message.py.swp  __main__.py  cloud.py  cloud_websocket.py  cloudv2.py  cloudv3.py  cloudv3_gigya.py  common.py  credentialstore.py  imageascii.py  imageascii2.py  local.py  message.py  plot_map.py  util.py
src/purei9_unofficial/tests/: fakerobot.py  test_cloud_v1.py  test_cloud_v2.py  test_cloud_v3.py  test_local.py  util.py
