[metadata]
# replace with your username:
name = purei9_unofficial
version = 0.0.12
author = Philipp Jeitner
author_email = p.jeitner@posteo.de
description = Small proof-of-concept client to connect to Electrolux and AEG cleaner robots
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Phype/purei9_unofficial
project_urls =
    Bug Tracker = https://github.com/Phype/purei9_unofficial/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5
install_requires = 
    requests
    numpy
    Pillow

[options.packages.find]
where = src
